--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,8 @@
   height: 300px;
   object-fit: contain;
 }
+
+.accordion-button:focus {
+  box-shadow: none;
+  border-color: rgba(0, 0, 0, 0.125);
+}
